Fix curly apostrophe typo in story.html

--- a/loop/story.html
+++ b/loop/story.html
@@ -1502,7 +1502,7 @@
             <div class="content center vertical-center">
                 <div class="numeral" style="top: 50%; left: 10%; transform: translateY(-50%); opacity: 0.1;">XV</div>
                 <div class="text-element text-large">
-                    or didn't move,
+                    or <span>didn&rsquo;t</span> move,
                 </div>
             </div>
         </div>
